# pnl-ui

./: .gitignore  README.md  fix_endpoints.sh  package-lock.json
backend/: .dockerignore  .env  .env.example  .env.test  .gitignore  .pylintrc  Dockerfile  README.md  README_CONTAINER_DETAILS.md  SUMMARY.md  azure-timeout-fix.md  check_containers.py  check_lifecycle_statuses.py  conftest.py  create_tables.py  debug_test.py  demo.db  docker-compose.yml  drop_tables.py  farming_control_panel.db  fill_container_crops.py  migrate.py  pyproject.toml  pytest.ini  requirements.txt  run.py  seed_data.py  server_log.txt  startup.sh  test_api.py  test_containers_standalone.py  verify_data.py
backend/alembic/: env.py
backend/alembic/versions/: 02e21154d7e9_add_recipeapplication_model_for_.py  8b57bcd12765_initial_migration.py  b1f075ab897b_add_nursery_station_fields_to_crops_.py
backend/app/: __init__.py  main.py  models.py
backend/app/api/: api_v1.py  dependencies.py  main.py
backend/app/auth/: dependencies.py  jwt_handler.py
backend/app/core/: config.py  constants.py  db.py  exceptions.py  logging.py  middleware.py  pagination.py  unit_of_work.py
backend/app/database/: __init__.py  container_details_samples.py  database.py  init_db.py  update_sample_data.py
backend/app/models/: __init__.py  activity_log.py  alert.py  base.py  container.py  crop.py  crop_history.py  crop_measurement.py  device.py  enums.py  environment_link.py  inventory_metrics.py  (+9 more)
backend/demo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: docker-entrypoint.sh  fix_container_status.py  init_database.py  run_migrations.sh  seed_database.py  seed_database_template.py  seed_many_containers.py  seed_overview_data.py  seed_recipe_database.py  seeding_config.yaml  setup_postgres.sh
backend/tests/: README.md  conftest.py
(+1902 files in other folders)
