[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-backend"
version = "0.1.0"
description = "FastAPI backend demo"
authors = [{name = "Demo", email = "demo@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.5.2",
    "sqlalchemy[asyncio]==2.0.23",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "python-multipart>=0.0.9",
    "email-validator==2.1.0",
    "passlib[bcrypt]==1.7.4",
    "tenacity==8.2.3",
    "python-jose[cryptography]==3.3.0",
    "httpx>=0.27,<0.28",
    "anyio>=4.0.0,<5.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.6",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "coverage==7.3.2",
    "pylint==3.0.3",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.uv]
dev-dependencies = [
    "ruff==0.1.6",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "coverage==7.3.2",
    "pylint==3.0.3",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "requests>=2.32.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
